// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useSettingsStore > localStorage > should load settings from localStorage 1`] = `
{
  "calculateBreaks": false,
  "id": "local",
  "locale": "fr",
  "openTimeDetailsOnStart": false,
  "openTimeDetailsOnStop": false,
  "organisationId": null,
  "roundTimes": false,
  "themeColor": "red",
  "themeMode": "dark",
}
`;

exports[`useSettingsStore > should have a default state 1`] = `
{
  "calculateBreaks": false,
  "id": "local",
  "locale": "en",
  "openTimeDetailsOnStart": false,
  "openTimeDetailsOnStop": false,
  "organisationId": null,
  "roundTimes": false,
  "themeColor": "sky",
  "themeMode": "system",
}
`;

exports[`useSettingsStore > updateSettings > should update settings 1`] = `
{
  "calculateBreaks": false,
  "id": "local",
  "locale": "de",
  "openTimeDetailsOnStart": false,
  "openTimeDetailsOnStop": false,
  "organisationId": null,
  "roundTimes": false,
  "themeColor": "sky",
  "themeMode": "system",
}
`;
